--- a/Readme
+++ b/Readme
@@ -13,4 +13,41 @@ USER_AGENT: "curl/7.68.0"
 ----------------------------------
 
 Command Syntax:- 
-# bash 
+# bash logscript.sh -f <logfile> -remoteip <x.x.x.x>
+
+-f          --  log file
+-remoteip   -- IP of user who has accessed
+
+eg:- # bash log_script.sh -f access.log -remoteip 192.168.29.20
+
+RESULTS:-
+```````
+-----------------------
+IP: 192.168.29.20
+---------------------------
+TIMESTAMP: [08/Mar/2022:15:52:05
+HTTP METHOD: "GET
+Endpoint: /icons/blank.gif
+HTTP_STATUS: 200
+USER_AGENT: "Mozilla/5.0
+----------------------------------
+
+-----------------------
+IP: 192.168.29.20
+---------------------------
+TIMESTAMP: [08/Mar/2022:15:52:05
+HTTP METHOD: "GET
+Endpoint: /icons/folder.gif
+HTTP_STATUS: 200
+USER_AGENT: "Mozilla/5.0
+----------------------------------
+
+-----------------------
+IP: 192.168.29.20
+---------------------------
+TIMESTAMP: [08/Mar/2022:15:52:05
+HTTP METHOD: "GET
+Endpoint: /icons/unknown.gif
+HTTP_STATUS: 200
+USER_AGENT: "Mozilla/5.0
+----------------------------------
